--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -8,3 +8,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f7f7f7;
 }
+
+a {
+    text-decoration: none !important;
+    color: inherit;
+}
